# chives-ai-core

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
src/ai_core/: __init__.py  config.py
src/ai_core/agent/: __init__.py  base_agent.py  chat_agent.py
src/ai_core/llm/: OpenAPIChatModel.py
src/ai_core/rag/: __init__.py  rag_engine.py
src/ai_core/tools/: __init__.py  base_tool.py  direct_reply_tool.py  test_tool.py
src/chives_backend/: __init__.py  main.py
src/chives_backend/api/: routes.py
tests/: .gitignore  README.md  __init__.py  conftest.py  test_chat_agent.py  test_chunking.py  test_main.py  test_openapi_chat_model.py  test_tools.py
